--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,4 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Greet the User
-        run: echo "Hello World!"
+        run: echo "Hello World!" 
+      # LS will simply list all files in the current directory to compare before and after
+      - run: ls -l
+      - uses: actions/checkout@v2
+      - run: ls -l
