--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test
-    - uses: davelosert/vitest-coverage-report-action@v1
+    - name: 'Report Coverage'
+      uses:  davelosert/vitest-coverage-report-action@v1
+      if: always()
       with:
         vite-config-path: vite.config.ts
